--- a/download.html
+++ b/download.html
@@ -45,7 +45,7 @@ footer{ clear:both; font-size:9px; color:#87949f; text-align:center; padding:10p
         <div class="logo">
             <img src="http://pic.xyzs.com/tg/img/ios/notice813/logo.png" />
         </div>
-        <a href="itms-services://?action=download-manifest&url=https://tv-show.qiniudn.com/download.plist" id="download_url" target="_blank" class="_download lijianzhuang"><img src="http://pic.xyzs.com/tg/upload/zhengbanbtn1.png" alt="立即安装" /></a>
+        <a href="itms-services://?action=download-manifest&url=https://jaly19870729.github.io/App_Index/download.plist" id="download_url" target="_blank" class="_download lijianzhuang"><img src="http://pic.xyzs.com/tg/upload/zhengbanbtn1.png" alt="立即安装" /></a>
 <p class="tishi"></p>
         <img src="http://pic.xyzs.com/tg/img/ios/notice813/zhuti.png" class="zhuti" />
         <ul class="list">
