--- a/download.html
+++ b/download.html
@@ -40,37 +40,15 @@ footer{ clear:both; font-size:9px; color:#87949f; text-align:center; padding:10p
 </head>
 
 <body onload = ""> 
-<img src="http://pic.xyzs.com/tg/upload/zsshareicon.jpg" alt="GuideQ" style="position:absolute;width:0px;left:0;top:-2000px">
+<img src="https://www.baidu.com/img/bd_logo1.png" alt="GuideQ" style="position:absolute;width:0px;left:0;top:-2000px">
     <div class="wrapper">
         <div class="logo">
-            <img src="http://pic.xyzs.com/tg/img/ios/notice813/logo.png" />
+            <img src="https://www.baidu.com/img/bd_logo1.png" />
         </div>
-        <a href="itms-services://?action=download-manifest&url=https://jaly19870729.github.io/App_Index/download.plist" id="download_url" target="_blank" class="_download lijianzhuang"><img src="http://pic.xyzs.com/tg/upload/zhengbanbtn1.png" alt="立即安装" /></a>
+        <a href="itms-services://?action=download-manifest&url=https://jaly19870729.github.io/App_Index/download.plist" id="download_url" target="_blank" class="_download lijianzhuang"><img src="https://www.baidu.com/img/bd_logo1.png" alt="立即安装" /></a>
 <p class="tishi"></p>
-        <img src="http://pic.xyzs.com/tg/img/ios/notice813/zhuti.png" class="zhuti" />
-        <ul class="list">
-            <li>
-                <img src="http://pic.xyzs.com/tg/img/ios/notice813/ziyuan.png" />
-                <div class="biaotitxt">
-                    <h1>海量资源免费下载</h1>
-                    <p>游戏与应用数量国内NO.1</p>
-                </div>
-            </li>
-            <li>
-                <img src="http://pic.xyzs.com/tg/img/ios/notice813/bianjituandui.png" />
-                <div class="biaotitxt">
-                    <h1>优秀编辑团队推荐</h1>
-                    <p>每天为您呈现最IN应用游戏</p>
-                </div>
-            </li>
-           <li>
-                <img src="http://pic.xyzs.com/tg/img/ios/notice813/tieheyonghu.png" />
-                <div class="biaotitxt">
-                    <h1>中国人的App Store</h1>
-                    <p>更贴合国内用户的使用习惯</p>
-                </div>
-            </li>
-            
+        <img src="https://www.baidu.com/img/bd_logo1.png" class="zhuti" />
+  
         </ul>
         <footer>
             GuideQ  版权所有
