--- a/download.html
+++ b/download.html
@@ -40,14 +40,14 @@ footer{ clear:both; font-size:9px; color:#87949f; text-align:center; padding:10p
 </head>
 
 <body onload = ""> 
-<img src="https://www.baidu.com/img/bd_logo1.png" alt="GuideQ" style="position:absolute;width:0px;left:0;top:-2000px">
+<img src="" alt="GuideQ" style="position:absolute;width:0px;left:0;top:-2000px">
     <div class="wrapper">
         <div class="logo">
-            <img src="https://www.baidu.com/img/bd_logo1.png" />
+            <img src="" />
         </div>
-        <a href="itms-services://?action=download-manifest&url=https://jaly19870729.github.io/App_Index/download.plist" id="download_url" target="_blank" class="_download lijianzhuang"><img src="https://www.baidu.com/img/bd_logo1.png" alt="立即安装" /></a>
+        <a href="itms-services://?action=download-manifest&url=https://jaly19870729.github.io/App_Index/download.plist" id="download_url" target="_blank" class="_download lijianzhuang"><img src="http://img5.imgtn.bdimg.com/it/u=394975689,1100090822&fm=21&gp=0.jpg" alt="" /></a>
 <p class="tishi"></p>
-        <img src="https://www.baidu.com/img/bd_logo1.png" class="zhuti" />
+        <img src="" class="zhuti" />
   
         </ul>
         <footer>
